# duckdb-odbc-config

./: Cargo.toml  LICENSE.txt  README.md  build.rs
.github/workflows/: windows.yml
resources/: duckdb_odbc_config-manifest.rc  duckdb_settings.py
src/: main.rs
src/about_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs
src/add_dsn_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs  result.rs
src/app_window/: controls.rs  events.rs  layout.rs  mod.rs  nui.rs  window.rs
src/common/: all_settings.rs  config_error.rs  duckdb_setting.rs  labels.rs  mod.rs  registry.rs
src/load_dsns_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs  result.rs
src/setting_change_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs  result.rs
src/setting_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs  result.rs
